// Butex — FirstClub Membership DB
// Paste into https://dbdiagram.io

Enum plan_details_status {
  DRAFT
  ACTIVE
  INACTIVE
  SUPERSEDED
}

Enum subscription_status {
  ACTIVE
  CANCELLED
  EXPIRED
}

Enum subscription_sub_status {
  NEW
  RENEWED
}

Enum discount_target_type {
  CATEGORY
  ITEM
}

Enum plan_details_history_action {
  CREATED
  MODIFIED
  DELETED
}

Enum tier_details_history_action {
  CREATED
  MODIFIED
  DELETED
}

Enum user_subscription_history_action {
  CREATED
  RENEWED
  CANCELLED
  EXPIRED
  TIER_UPGRADED
  TIER_DOWNGRADED
  PLAN_CHANGED
  MODIFIED
}

Table users {
  id bigint [pk, increment]
  name varchar(128) [not null]
  email varchar(256) [not null, unique]
  phone varchar(20) [not null, unique]
  active boolean [not null, default: true]
  cohort_code varchar(64)
  address varchar(512)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table user_orders {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  order_value decimal(12,2) [not null]
  ordered_at timestamp [not null]
  created_at timestamp [not null]
}

Table plans {
  id bigint [pk, increment]
  code varchar(64) [not null, unique]
  name varchar(128) [not null]
  description varchar(512)
  active boolean [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table plan_details {
  id bigint [pk, increment]
  plan_id bigint [not null, ref: > plans.id]
  version int [not null]
  duration_days int [not null]
  price decimal(12,2) [not null]
  currency varchar(3) [not null]
  free_delivery_enabled boolean [not null]
  extra_discount_percent decimal(5,2)
  exclusive_deals_access boolean [not null]
  early_sale_access boolean [not null]
  priority_support boolean [not null]
  effective_from timestamp [not null]
  effective_to timestamp
  status plan_details_status [not null]
  is_default boolean [not null]
  change_notes varchar(512)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table plan_discount_rules {
  id bigint [pk, increment]
  plan_details_id bigint [not null, ref: > plan_details.id]
  target_type discount_target_type [not null]
  target_id varchar(128) [not null]
  discount_percent decimal(5,2) [not null]
  active boolean [not null]
}

Table plan_details_history {
  id bigint [pk, increment]
  plan_details_id bigint [not null, ref: > plan_details.id]
  action plan_details_history_action [not null]
  remark varchar(512)
  action_by varchar(128) [not null]
  action_at timestamp [not null]
}

Table tiers {
  id bigint [pk, increment]
  code varchar(64) [not null, unique]
  name varchar(128) [not null]
  description varchar(512)
  rank int [not null]
  active boolean [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table tier_details {
  id bigint [pk, increment]
  tier_id bigint [not null, ref: > tiers.id]
  version int [not null]
  min_orders int
  min_monthly_order_value decimal(12,2)
  cohort_code varchar(64)
  free_delivery_enabled boolean [not null]
  extra_discount_percent decimal(5,2)
  exclusive_deals_access boolean [not null]
  early_sale_access boolean [not null]
  priority_support boolean [not null]
  effective_from timestamp [not null]
  effective_to timestamp
  status plan_details_status [not null]
  is_default boolean [not null]
  change_notes varchar(512)
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table tier_discount_rules {
  id bigint [pk, increment]
  tier_details_id bigint [not null, ref: > tier_details.id]
  target_type discount_target_type [not null]
  target_id varchar(128) [not null]
  discount_percent decimal(5,2) [not null]
  active boolean [not null]
}

Table tier_details_history {
  id bigint [pk, increment]
  tier_details_id bigint [not null, ref: > tier_details.id]
  action tier_details_history_action [not null]
  remark varchar(512)
  action_by varchar(128) [not null]
  action_at timestamp [not null]
}

Table subscriptions {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  plan_details_id bigint [not null, ref: > plan_details.id]
  tier_details_id bigint [not null, ref: > tier_details.id]
  starts_at timestamp [not null]
  expires_at timestamp [not null]
  status subscription_status [not null]
  sub_status subscription_sub_status [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table user_subscription_history {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  subscription_id bigint [not null, ref: > subscriptions.id]
  action user_subscription_history_action [not null]
  remark varchar(512)
  action_by varchar(128) [not null]
  action_at timestamp [not null]
}
